syntax = "proto3";

package auth_service.v1;

service Auth {
  rpc Register (RegisterRequest) returns (RegisterResponse);

  rpc Login (LoginRequest) returns (LoginResponse);

  rpc Refresh (RefreshRequest) returns (RefreshResponse);

  rpc WhoIAm (WhoIAmRequest) returns (WhoIAmResponse);

  rpc Logout (LogoutRequest) returns (LogoutResponse);
}

message Tokens {
  string refresh_jwt = 1;
  string access_jwt = 2;
}

message Account {
  string id = 1;
  string email = 2;
  string profile_name = 3;
  string profile_surname = 4;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string profile_name = 3;
  string profile_surname = 4;
}

message RegisterResponse {}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string session_id = 1;
  Tokens tokens = 2;
  Account account = 3;
}

message RefreshRequest {
  string refresh_jwt = 1;
}

message RefreshResponse {
  Tokens tokens = 1;
}

message WhoIAmRequest {}

message WhoIAmResponse {
  Account account = 1;
}

message LogoutRequest {}

message LogoutResponse {}
